[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = ""
authors = ["Nate Allen <nallen@directionsresearch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
windows-curses = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
